# ScholarMind_MAS

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS_SUMMARY.md  LICENSE  README.md  config.py  design.md  main.py  main_runtime.py  model_configs.json  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml
docs/: design.md  logging_guide.md  runtime_api.md  runtime_usage.md  task.md
scholarmind/: __init__.py
scholarmind/agents/: __init__.py  base_agent.py  experiment_evaluator_agent.py  insight_generation_agent.py  interactive_agent.py  methodology_agent.py  parameter_collection_agent.py  resource_retrieval_agent.py  runtime_agent.py  synthesizer_agent.py
scholarmind/models/: __init__.py  structured_outputs.py
scholarmind/tests/: test_basic_functionality.py  test_phase2_agents.py  test_phase3_integration.py  test_resource_retrieval_agent.py
scholarmind/tests/demo/: demo_runtime.py
scholarmind/tools/: academic_search.py  paper_parser.py  report_generator.py
scholarmind/utils/: __init__.py  error_handler.py  input_validation.py  logger.py  message_utils.py  model_availability.py  model_config_manager.py  path_utils.py
scholarmind/workflows/: scholarmind_enhanced_pipeline.py  scholarmind_pipeline.py
scripts/: clean_logs.sh
tests/: test_chinese_path_integration.py  test_chinese_paths.py
